# sweet

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  book.toml  justfile  run.ts  rustfmt.toml
.cargo/: config.toml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/bench/: bench_assert.rs
cli/src/rsx/: rsx.rs
cli/src/sweet_cli/: build_wasm.rs  command.rs  run.rs  run_tests.rs  sweet_cli.rs
cli/src/test_runners/: deno.ts  mod.rs  test_server.rs  test_wasm.rs
crates/sweet-cli/: Cargo.toml
crates/sweet-cli/src/: lib.rs  main.rs
crates/sweet-cli/src/automod/: mod.rs
crates/sweet-cli/src/bench/: mod.rs
crates/sweet-cli/src/rsx/: mod.rs  rsx.rs  rsx_command.rs
crates/sweet-cli/src/test_runners/: deno.ts  test_server.rs  test_wasm.rs
crates/sweet_bevy/: Cargo.toml
crates/sweet_bevy/examples/: hello_bevy.rs
crates/sweet_bevy/src/: lib.rs
crates/sweet_bevy/src/extensions/: hierarchy.rs  mod.rs  vec3.rs
crates/sweet_bevy/src/resources/: mod.rs  random_source.rs
crates/sweet_bevy/src/systems/: exit_system.rs  mod.rs
crates/sweet_bevy/src/utilities/: when.rs
crates/sweet_core/: Cargo.toml
crates/sweet_core/src/: flume_rsx.rs  lib.rs  string_rsx.rs
crates/sweet_core/src/error/: mod.rs  parse_error.rs
crates/sweet_core/src/html/: html_document.rs  html_node.rs  mod.rs  rsx_to_html.rs  rsx_to_resumable_html.rs
crates/sweet_core/src/hydration/: dom_event_registry.rs  dom_hydrator.rs  dom_mounter.rs  html_node_hydrator.rs  mod.rs  rsx_context_map.rs  rust_node_map.rs
crates/sweet_core/src/renderer/: html_node.rs  mod.rs
crates/sweet_core/src/rsx/: _html_partial_quote.rs  html_node_context.rs  html_partial.rs  html_partial_quote.rs  hydrate.rs  hydrate_client.rs  into_html.rs  mod.rs  rsx.rs  rsx_context.rs  rsx_node.rs  rsx_parts.rs  rsx_rust.rs  rsx_tree.rs  rsx_tree_mapper.rs  rsx_tree_quote.rs  rsx_tree_visitor.rs  rsx_tree_walker.rs  rust_parts.rs  string_rsx.rs  text_block_encoder.rs  tree_position.rs
crates/sweet_core/src/signal/: channel_signal.rs  mod.rs
crates/sweet_core/src/signals_rsx/: mod.rs  signal.rs
crates/sweet_core/src/tokens/: mod.rs  rsx_rust_tokens.rs
crates/sweet_core/src/tree/: _rsx_tree_quote.rs  hydrate.rs  mod.rs  rsx.rs  rsx_tree.rs  text_block_encoder.rs  tree.rs  tree_iter.rs  tree_iter_position.rs  tree_map.rs  tree_mapper.rs  tree_position.rs  tree_visitor.rs
crates/sweet_core/src/utils/: mod.rs
crates/sweet_fs/: Cargo.toml
crates/sweet_fs/src/: lib.rs
crates/sweet_fs/src/fs/: fs_ext.rs  fs_watcher.rs  mod.rs  path_ext.rs  read_dir.rs  read_file.rs
crates/sweet_fs/src/process/: fs_watcher.rs  mod.rs
crates/sweet_net/: Cargo.toml
crates/sweet_net/src/: lib.rs
crates/sweet_net/src/cross_fetch/: error.rs  impl_fetch.rs  impl_reqwest.rs  mod.rs  native.rs  request.rs  response.rs  wasm.rs
crates/sweet_parse/: Cargo.toml
crates/sweet_parse/src/: lib.rs
crates/sweet_parse/src/parse_rsx/: mod.rs  parse_rstml.rs  rsx_file_visitor.rs  rsx_plugin.rs  sweet_rsx_plugin.rs  walk_nodes.rs
crates/sweet_parse/src/reconciler/: mod.rs  reconciler.rs
crates/sweet_parse/src/rsx/: mod.rs  parse_rstml.rs  rsx_file_visitor.rs  rsx_parts_tokens.rs  rsx_plugin.rs  sweet_rsx_plugin.rs  walk_nodes.rs
crates/sweet_parse/tests/: parse_file.rs
crates/sweet_render/: Cargo.toml
crates/sweet_render/examples/: hello_world.html  hello_world.rs
crates/sweet_render/src/: lib.rs
crates/sweet_render/src/render/: into_html.rs  mod.rs  render.rs  render_plugin.rs  rsx_renderer.rs  rsx_visitor.rs  sweet_render_plugin.rs  sweet_rsx_visitor.rs
crates/sweet_render/src/sweet_loader/: live_block.rs  sweet_loader.rs
crates/sweet_render/tests/: render.rs  render_file.rs  roundtrip.rs
crates/sweet_rsx/: Cargo.toml  README.md
crates/sweet_rsx/examples/: hello_world.html  hello_world.rs  html_to_string.rs  macro.rs  rsx_macro.rs
crates/sweet_rsx/macros/: Cargo.toml
crates/sweet_rsx/macros/src/: lib.rs
crates/sweet_rsx/parser/: Cargo.toml
crates/sweet_rsx/src/: lib.rs
crates/sweet_rsx/src/error/: parse_error.rs
crates/sweet_rsx/src/html/: rsx_to_html.rs  rsx_to_resumable_html.rs
crates/sweet_rsx/src/hydration/: rsx_context_map.rs
crates/sweet_rsx/src/parse_rsx/: mod.rs  parse_rstml.rs  rstml_to_rsx_tokens.rs  rsx_file_visitor.rs  rsx_node_tokens.rs  rsx_parser.rs  rsx_plugin.rs  sweet_rsx_plugin.rs  walk_nodes.rs
crates/sweet_rsx/src/rsx/: hydrate_client.rs  into_html.rs  into_rsx.rs  mod.rs  parse_error.rs  rsx_context.rs  text_block_encoder.rs
crates/sweet_rsx/src/signals_rsx/: mod.rs
crates/sweet_rsx/src/sweet_loader/: catch_uncanny.js  hydrate_client.rs  live_block.rs  mod.rs  sweet_loader.rs
crates/sweet_rsx/src/tree/: mod.rs  tree_position.rs
crates/sweet_rsx/src/tree_old/: tree_mapper.rs
crates/sweet_rsx/tests/: parse_file.rs  parse_macro.rs  render.rs
crates/sweet_server/: Cargo.toml
crates/sweet_server/src/: lib.rs
crates/sweet_server/src/server/: mod.rs  server.rs  tls.rs
crates/sweet_site/: Cargo.toml
crates/sweet_site/examples/: compile_html.rs  reactive_graph.rs
crates/sweet_site/src/: lib.rs
crates/sweet_site/src/components/: HelloWorld.rs  counter.rs  hello_world.rs  mod.rs
crates/sweet_site/src/pages/: index.rs
crates/sweet_site/src/render/: mod.rs  so_pretty.html  so_pretty.rs
crates/sweet_test/: Cargo.toml  README.md
crates/sweet_test/macros/: Cargo.toml
crates/sweet_test/macros/src/: lib.rs
crates/sweet_test/src/: lib.rs
crates/sweet_test/src/_matchers/: mod.rs
crates/sweet_test/src/backtrace/: backtrace_file.rs  backtrace_location.rs
crates/sweet_test/src/bevy/: observer_utils.rs
crates/sweet_test/src/e2e/: mod.rs  page.rs  visit.rs
crates/sweet_test/src/libtest/: run_libtest_pretty.rs  test_desc_ext.rs
crates/sweet_test/test_examples/: hello_async.rs
crates/sweet_test/tests/: hello_async.rs  macros.rs  scratchpad.rs  sweet_macro.rs
crates/sweet_tree/: Cargo.toml
crates/sweet_tree/src/: lib.rs
crates/sweet_utils/: Cargo.toml
crates/sweet_utils/src/: lib.rs
crates/sweet_utils/tests/: e2e.rs  utils_tests.rs
(+294 files in other folders)
