[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
members = [
	"crates/sweet_fs",
	# "crates/sweet_site",
	"crates/sweet_test/macros",
	"crates/sweet_test",
	"crates/sweet_utils",
	"crates/sweet_web",
	"crates/sweet-cli",
]

[workspace.package]
version = "0.3.0-rc.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Peter Hayman <peteyhayman@gmail.com>"]
readme = "README.md"
description = "Cross-platform utilities and dev tools"
documentation = "https://docs.rs/sweet"
repository = "https://github.com/mrchantey/sweet"
categories = [
	"compilers",
	"development-tools",
	"development-tools::testing",
	"wasm",
	"web-programming",
]
keywords = ["full-stack", "browser", "web", "test", "e2e"]

[workspace.dependencies]
sweet = { path = "", version = "0.3.0-rc.3" }
sweet_fs = { path = "crates/sweet_fs", version = "0.3.0-rc.3" }
sweet_test = { path = "crates/sweet_test", version = "0.3.0-rc.3" }
sweet_test_macros = { path = "crates/sweet_test/macros", version = "0.3.0-rc.3" }
sweet_web = { path = "crates/sweet_web", version = "0.3.0-rc.3" }
sweet_utils = { path = "crates/sweet_utils", version = "0.3.0-rc.3" }

#💡 utility
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1"
thiserror = "2"
backtrace = "0.3"
extend = "1"
strum = "0.26"
strum_macros = "0.26"
prettyplease = "0.2"

#💡 game
bevy = { version = "0.15", default-features = false }

#💡 io ###
clap = { version = "4.2", features = ["derive"] }
colorize = "0.1"
glob = "0.3"
serde = { version = "1", features = ["derive"] }

#💡 async
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.42", features = [
	"macros",
	"rt",
	"rt-multi-thread",
	"time",
] }
once_cell = "1.20"
flume = "0.11"
rayon = "1.7"

#💡 math
# only cos some dep requires it and we need to enable js feature
getrandom = { version = "0.2", features = ["js"] }

#💡 macros
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"

#💡wasm
console_log = "1.0"
js-sys = "0.3.63"
wasm-bindgen = "=0.2.99"
wasm-bindgen-futures = "0.4.36"
console_error_panic_hook = "0.1.7"
web-sys = "0.3.76"

[package]
name = "sweet"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
# default = ["server", "rsx", "macros", "render"]
test = ["dep:sweet_test"]
fs = ["dep:sweet_fs"]
web = ["dep:sweet_web"]
bevy = ["sweet_test?/bevy"]

[dependencies]
sweet_utils.workspace = true
sweet_test = { workspace = true, optional = true }
sweet_fs = { workspace = true, optional = true }
sweet_web = { workspace = true, optional = true }

# [examples]
# counter = { required_features = ["server"] }
# render_counter = { required_features = ["server"] }

[dev-dependencies]
sweet = { workspace = true, features = ["test"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# sweet = { workspace = true, features = ["test", "fs"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
getrandom.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true