[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
members = [
	"crates/sweet_bevy",
	"crates/sweet_fs",
	# "crates/sweet_site",
	"crates/sweet_server",
	"crates/sweet_test/macros",
	"crates/sweet_test",
	"crates/sweet_utils",
	"crates/sweet_web",
	"crates/sweet-cli",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Peter Hayman"]
readme = "README.md"
description = "Cross-platform utilities and dev tools"
documentation = "https://docs.rs/sweet"
repository = "https://github.com/mrchantey/sweet"
categories = [
	"compilers",
	"development-tools",
	"development-tools::testing",
	"wasm",
	"web-programming",
]
keywords = ["full-stack", "browser", "web", "test", "e2e"]

[workspace.dependencies]
sweet = { path = "", version = "0.3.0" }
sweet_bevy = { path = "crates/sweet_bevy", version = "0.3.0" }
sweet_fs = { path = "crates/sweet_fs", version = "0.3.0" }
sweet_server = { path = "crates/sweet_server", version = "0.3.0" }
sweet_test = { path = "crates/sweet_test", version = "0.3.0" }
sweet_test_macros = { path = "crates/sweet_test/macros", version = "0.3.0" }
sweet_web = { path = "crates/sweet_web", version = "0.3.0" }
sweet_utils = { path = "crates/sweet_utils", version = "0.3.0" }

#💡 utility
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1"
thiserror = "2"
backtrace = "0.3"
extend = "1"
strum = "0.26"
strum_macros = "0.26"

#💡 game
bevy = { version = "0.15", default-features = false }

#💡 io ###
clap = { version = "4", features = ["derive"] }
colorize = "0.1"
glob = "0.3"
serde = { version = "1", features = ["derive"] }

#💡 async
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = [
	"macros",
	"sync",
	"rt",
	"rt-multi-thread",
	"time",
] }
flume = "0.11"
rayon = "1"

#💡 parsing
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
prettyplease = "0.2"
#💡 random
# rand = "0.9"
# rand_chacha = "0.9"
# # wasm_js ignored in native
# getrandom = { version = "0.3", features = ["wasm_js"] }
# old rand until https://github.com/bevyengine/bevy/pull/18047
# also when you update it remove all the RandomSource.0 in beet too please
rand = "0.8.5"
rand_chacha = "0.3.1"
# # wasm_js ignored in native
getrandom = { version = "0.2.15", features = ["js"] }

#💡wasm
console_log = "1.0"
js-sys = "0.3"
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = "0.3"

[package]
name = "sweet"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true


[features]
# default = ["server", "rsx", "macros", "render"]
bevy_default = ["bevy", "sweet_bevy/bevy_default"]
bevy = ["dep:sweet_bevy", "sweet_utils/bevy", "sweet_test?/bevy"]
serde = ["sweet_utils/serde"]
fs = ["dep:sweet_fs"]
rand = ["sweet_utils/rand", "sweet_bevy?/rand"]
test = ["dep:sweet_test"]
web = ["dep:sweet_web"]
server = ["dep:sweet_server"]

[dependencies]
sweet_utils.workspace = true
sweet_bevy = { workspace = true, optional = true }
sweet_test = { workspace = true, optional = true }
sweet_web = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sweet_server = { workspace = true, optional = true }
sweet_fs = { workspace = true, optional = true }


[dev-dependencies]
sweet = { path = "", features = ["bevy", "rand", "test"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sweet = { path = "", features = ["fs"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
sweet = { path = "", features = ["web"] }
console_error_panic_hook.workspace = true
console_log.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
