[package]
name = "sweet-cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = "README.md"
description = "CLI for the Sweet test framework"
documentation = "https://mrchantey.github.io/forky/docs/sweet/cli"
categories = ["development-tools::testing"]
keywords = ["cli", "test", "e2e", "browser", "webdriver"]

[[bin]]
name = "sweet"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sweet.workspace = true