[package]
name = "sweet-cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = "README.md"
description = "CLI for the Sweet test framework"
documentation = "https://mrchantey.github.io/forky/docs/sweet/cli"
categories = ["development-tools::testing"]
keywords = ["cli", "test", "e2e", "browser", "webdriver"]

[[bin]]
name = "sweet"
path = "src/main.rs"

[dependencies]
forky = { workspace = true, features = ["fs"] }
anyhow.workspace = true
clap.workspace = true
sweet = { workspace = true, features = ["test"] }

[dev-dependencies]
