[package]
name = "sweet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "sweet"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
# we use test args
sweet = { workspace = true, features = ["test"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
forky = { workspace = true, features = ["fs"] }
clap.workspace = true
