[package]
name = "sweet_bevy"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
sweet_utils.workspace = true
bevy.workspace = true

anyhow.workspace = true
extend.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
sweet_web.workspace = true
js-sys.workspace = true
# wasm-bindgen = { workspace = true, optional = true }
# wasm-bindgen-futures = { workspace = true, optional = true }
# web-sys = { workspace = true, optional = true }


[dev-dependencies]
sweet_test = { workspace = true, features = ["bevy"] }
