[package]
name = "sweet_bevy"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true

[features]
# default = ["rand"]
# wasm support requires rust flags
# https://docs.rs/getrandom/latest/getrandom/#webassembly-support
rand = ["dep:rand", "dep:rand_chacha", "dep:getrandom"]

[dependencies]
sweet_utils.workspace = true
bevy.workspace = true

anyhow.workspace = true
extend.workspace = true
rand = { version = "0.9", optional = true }
rand_chacha = { version = "0.9", optional = true }
getrandom = { version = "0.3.1", optional = true, features = ["wasm_js"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
sweet_web.workspace = true
js-sys.workspace = true
# wasm-bindgen = { workspace = true, optional = true }
# wasm-bindgen-futures = { workspace = true, optional = true }
# web-sys = { workspace = true, optional = true }


[dev-dependencies]
sweet_test = { workspace = true, features = ["bevy"] }
sweet_bevy = { workspace = true, features = ["rand"] }
