[package]
name = "sweet_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true


[features]
serde = ["dep:serde"]


[dependencies]
thiserror.workspace = true
anyhow.workspace = true
flume.workspace = true
html-escape = "0.2.13"


serde = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
forky = { workspace = true, features = ["fs"] }
tokio.workspace = true

#💡 wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
forky = { workspace = true, features = ["web"] }
console_error_panic_hook.workspace = true
console_log.workspace = true
getrandom.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true


[dev-dependencies]
sweet = { workspace = true, features = ["test"] }
