[package]
name = "sweet_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true


[features]
tokens = ["dep:quote", "dep:syn", "dep:proc-macro2"]
serde = ["dep:serde", "dep:bincode"]
flume = ["dep:flume"]

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
flume = { workspace = true, optional = true }
strum.workspace = true
strum_macros.workspace = true


once_cell.workspace = true
bincode = { version = "1", optional = true }

syn = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }

serde = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
forky = { workspace = true, features = ["fs"] }
tokio.workspace = true

#💡 wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
forky = { workspace = true, features = ["web"] }
console_error_panic_hook.workspace = true
console_log.workspace = true
getrandom.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true


[dev-dependencies]
sweet_test.workspace = true
sweet_rsx_macros.workspace = true
