[package]
name = "sweet_fs"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true


[dependencies]
sweet_utils.workspace = true
## utils
glob.workspace = true
anyhow.workspace = true
thiserror.workspace = true
extend.workspace = true

## terminal
crossterm = "0.28"

## cli
clap.workspace = true

## fs
notify = "7"
notify-debouncer-full = "0.4"
## async
tokio.workspace = true
futures.workspace = true


[dev-dependencies]
sweet_test.workspace = true