[package]
name = "sweet_net"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]


[dependencies]
#💡 Utils
anyhow.workspace = true
thiserror.workspace = true
sweet_utils.workspace = true
once_cell.workspace = true

#💡 Serde
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }


#💡 HTTP
http.workspace = true
http-body-util.workspace = true

#💡 Native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest.workspace = true

#💡 Web
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio.workspace = true

[dev-dependencies]
sweet_test.workspace = true
