[package]
name = "sweet_parse"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
sweet_core.workspace = true

syn = { workspace = true, features = ["visit"] }
quote.workspace = true
proc-macro2.workspace = true
anyhow.workspace = true

rstml = { version = "0.12", features = ["rawtext-stable-hack"] }
proc-macro2-diagnostics = "0.10"


[dev-dependencies]
sweet = { workspace = true, features = ["test"] }
