[package]
name = "sweet_render"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true


[dependencies]
sweet_core.workspace = true
forky.workspace = true

thiserror.workspace = true
anyhow.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
forky = { workspace = true, features = ["fs"] }

#💡 wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
forky = { workspace = true, features = ["web"] }
console_log.workspace = true
flume.workspace = true
getrandom.workspace = true
js-sys.workspace = true
console_error_panic_hook.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true

[dev-dependencies]
sweet = { workspace = true, features = ["test","render"] }
