[package]
name = "sweet_rsx"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["rsx"]
rsx = [
	"dep:syn",
	"dep:quote",
	"dep:proc-macro2",
	"dep:rstml",
	"dep:prettyplease",
	"dep:proc-macro2-diagnostics",
]

[dependencies]
sweet_core.workspace = true
forky = { workspace = true, features = ["fs"] }
syn = { workspace = true, features = ["visit"], optional = true }
quote = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }
prettyplease = { version = "0.2", optional = true }
rstml = { version = "0.12", features = [
	"rawtext-stable-hack",
], optional = true }
proc-macro2-diagnostics = { version = "0.10", optional = true }

anyhow.workspace = true


[dev-dependencies]
sweet = { workspace = true, features = ["test", "rsx", "render"] }
