[package]
name = "sweet_rsx"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true


[dependencies]
sweet_utils.workspace = true
sweet_core = { workspace = true, features = ["serde", "tokens"] }
anyhow.workspace = true

syn = { workspace = true, features = ["visit"] }
quote.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
rstml = { version = "0.12", features = ["rawtext-stable-hack"] }
proc-macro2-diagnostics = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true

[dev-dependencies]
sweet_test.workspace = true
sweet_rsx_macros.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
forky = { workspace = true, features = ["fs"] }

