[package]
name = "sweet_rsx"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true


[features]
default = ["macros"]
macros = ["dep:sweet_rsx_macros"]
parser = ["dep:sweet_rsx_parser"]
serde = ["dep:serde"]

[dependencies]
sweet_utils.workspace = true
thiserror.workspace = true
anyhow.workspace = true
strum.workspace = true
strum_macros.workspace = true
sweet_rsx_parser = { workspace = true, optional = true }
sweet_rsx_macros = { workspace = true, optional = true }


once_cell.workspace = true

serde = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
forky = { workspace = true, features = ["fs"] }
tokio.workspace = true

#💡 wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
forky = { workspace = true, features = ["web"] }
console_error_panic_hook.workspace = true
console_log.workspace = true
getrandom.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true


[dev-dependencies]
sweet_test.workspace = true
