[package]
name = "sweet_server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
flume.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
forky = { workspace = true, features = ["fs"] }
tokio.workspace = true

[dev-dependencies]
sweet_test.workspace = true
