[package]
name = "sweet_site"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true


[dependencies]
forky = { workspace = true, features = ["fs"] }
anyhow.workspace = true
sweet_rsx.workspace = true

reactive_graph = { version = "0.1", features = ["effects"] }
