[package]
name = "sweet_site"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true


[features]
render = []

[dependencies]
sweet.workspace = true
forky = { workspace = true, features = ["fs"] }
anyhow.workspace = true

reactive_graph = { version = "0.1", features = ["effects"] }
