[package]
name = "sweet_test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "A very pretty test runner for rust"
documentation = "https://mrchantey.github.io/forky/docs/sweet"
categories = ["development-tools::testing"]
keywords = [ # 5 at most
	"test",
	"unit",
	"e2e",
	"browser",
]

[features]
bevy = ["dep:bevy"]

[dependencies]
#💡 internal 
forky.workspace = true
sweet_test_macros.workspace = true

#💡 misc 
anyhow.workspace = true
extend.workspace = true

#💡 console 
log.workspace = true
pretty_env_logger.workspace = true
colorize.workspace = true
backtrace.workspace = true

#💡 parse 
glob.workspace = true
clap.workspace = true

#💡 async
flume = "0.11.1"
rayon.workspace = true
futures.workspace = true
thread_local = "1.1.8"

#💡 bevy 
bevy = { workspace = true, optional = true }


#💡 native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
forky = { workspace = true, features = ["fs"] }
pin-project-lite = "0.2.15"

#💡 wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log.workspace = true
js-sys.workspace = true
web-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_error_panic_hook.workspace = true
getrandom.workspace = true # enable js feature
forky = { workspace = true, features = ["web"] }

[dev-dependencies]
sweet = { workspace = true, features = ["test"] }


[[test]]
name = "hello_test"
path = "test_examples/hello_test.rs"

[[test]]
name = "hello_async"
path = "test_examples/hello_async.rs"
