[package]
name = "sweet_test"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
bevy = ["dep:bevy"]

[dependencies]
#💡 internal 
sweet_utils.workspace = true
sweet_test_macros.workspace = true
forky.workspace = true

#💡 misc 
anyhow.workspace = true
extend.workspace = true

#💡 console 
log.workspace = true
pretty_env_logger.workspace = true
colorize.workspace = true
backtrace.workspace = true

#💡 parse 
glob.workspace = true
clap.workspace = true

#💡 async
flume.workspace = true
rayon.workspace = true
futures.workspace = true
thread_local = "1.1.8"

#💡 bevy 
bevy = { workspace = true, optional = true }


#💡 native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
forky = { workspace = true, features = ["fs"] }
pin-project-lite = "0.2.15"

#💡 wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log.workspace = true
js-sys.workspace = true
web-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_error_panic_hook.workspace = true
getrandom.workspace = true                       # enable js feature
forky = { workspace = true, features = ["web"] }

[[test]]
name = "hello_test"
path = "test_examples/hello_test.rs"

[[test]]
name = "hello_async"
path = "test_examples/hello_async.rs"
