[package]
name = "sweet_utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
bevy = ["dep:bevy"]
tokio = ["dep:tokio"]
rand = ["dep:rand", "dep:rand_chacha", "dep:getrandom"]

[dependencies]
extend.workspace = true
anyhow.workspace = true
bevy = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = ["Window"] }
js-sys.workspace = true

[dev-dependencies]
sweet_test.workspace = true
sweet_utils = { workspace = true, features = ["tokio"] }
