[package]
name = "sweet_test_macros"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = "macro crate for sweet"
repository = { workspace = true }

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
anyhow = { workspace = true }
